--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "immutability-helper": "^2.8.1",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1"
+    "react-redux": "^5.1.1",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
+    "redux-form": "^7.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
